--- a/sites/all/themes/lapcat/less/layout.less
+++ b/sites/all/themes/lapcat/less/layout.less
@@ -548,7 +548,7 @@ form #user-login-form{
   right: 9em;
   bottom: 2em;
   z-index: 10;
-  filter: drop-shadow(2px 2px 2px rgba(0,0,0,0.2)); 
+  filter: @dropShadowFilter; 
 }
 .gitarBoy:hover + .oval-thought-border{
   /*
@@ -559,6 +559,9 @@ form #user-login-form{
  opacity:1;
 }
 
+.pageTitle{
+  filter: @dropShadowFilter;  
+} 
 .subPageHeader{
   font-size:50px;
   height:8.846rem;
@@ -573,14 +576,7 @@ form #user-login-form{
     white-space:nowrap;
     height:90px;
     width:100%;
-    h1{
-      position:relative;
-      &:after{
-        position:absolute;
-        top:0;bottom:0;left:0;right:0;
-        .dropShadow();
-      }
-    }
+  }
   /*Sub page headers*/
   &.Articles{
     background:url('/sites/all/themes/lapcat/images/articlesHeader.jpg');
@@ -613,7 +609,6 @@ form #user-login-form{
     background:url('/sites/all/themes/lapcat/images/teenHeader.jpg') white;
   }
   /*Sub page headers End*/
- }
 }
 
 .subPageCatalogSearch{
@@ -975,7 +970,7 @@ li{
   width:29em;
   background-image: url('/sites/all/themes/lapcat/images/treeLarge.png');
   background-repeat:no-repeat;
-  filter: drop-shadow(2px 2px 2px rgba(0,0,0,0.2));
+  filter: @dropShadowFilter;
 }  
 .childrenSun{
   position:absolute;
@@ -1038,12 +1033,14 @@ footer {
     }  
   }
   .footerLeft {
-    width:78%;
+    width:21em;
     float:left;
+    margin-left:2em;
   }
   .footerRight {
-    width:22%;
+    width:18em;
     float:right;
+    margin-right:2em;
   }
   #search-block-form{
     box-shadow: inset 0 0 1px 1px @shadow;
